--- a/docs/introduction/about.mdx
+++ b/docs/introduction/about.mdx
@@ -6,7 +6,7 @@ slug: /
 
 # Introduction
 
-OpenBeta is an open source project dedicated to ensuring free and open access to rock climbing data in computer programming, research, and data science endeavors.
+OpenBeta is an open source project dedicated to ensuring free and open access to rock climbing data in cofdmputer programming, research, and data science endeavors.
 
 ### What We Do
 
