--- a/docs/introduction/about.mdx
+++ b/docs/introduction/about.mdx
@@ -8,7 +8,7 @@ slug: /
 
 OpenBeta is an open source project dedicated to ensuring free and open access to rock climbing data in cofdmputer programming, research, and data science endeavors.
 
-### What We Do
+### What We Dod
 
 - Publish rock climbing datasets, volumes of crowd-sourced climbing information, created and shared by climbers, under an **open license**.
 - Develop and maintain open source tools to enable the community to work with climbing data.
